[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Matrix/MatrixSignIn.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/Montserrat-Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/Montserrat-Medium.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Montserrat-Italic.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Music/MainMenu.mp3" type="AudioStream" id=6]

[sub_resource type="Theme" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[node name="Lobby" type="Spatial"]

[node name="Sun" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, -0.25, 0.0669873, 0, 0.258819, 0.965926, -0.258819, -0.933013, 0.25, 0, 8, 0 )
light_color = Color( 0.0980392, 0.490196, 0.760784, 1 )
light_energy = 0.5
light_indirect_energy = 0.1
light_specular = 0.0
light_bake_mode = 2
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.965926, 0.109382, -0.23457, 0, 0.906308, 0.422618, 0.258819, -0.408218, 0.875426, 0, 4.365, 0 )
current = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -355.0
theme = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
text = "MediaPlay Metaverse"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeserverUrlInput" type="LineEdit" parent="UI"]
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
hint_tooltip = "The homeserver URL, like https://matrix-client.matrix.org for example."
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Homeserver URL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameInput" type="LineEdit" parent="UI"]
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
margin_top = 55.0
margin_bottom = 100.0
hint_tooltip = "The username of the account on the homeserver."
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="UI"]
anchor_left = 0.35
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
margin_top = 110.0
margin_bottom = 155.0
hint_tooltip = "The password for the account."
custom_fonts/font = ExtResource( 2 )
secret = true
placeholder_text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignInButton" type="Button" parent="UI"]
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -56.0
margin_right = 58.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 4 )
text = "SIGN IN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notice" type="Label" parent="UI"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -302.0
margin_right = 40.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 5 )
text = "Don't have a Matrix account yet? Register one using another Matrix client."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="UI"]

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.082
autoplay = true

[node name="Objects" type="Node" parent="."]

[node name="Ground" type="StaticBody" parent="Objects"]
transform = Transform( 5, 0, 0, 0, 0.15, 0, 0, 0, 5, 0, -0.15, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground2" type="StaticBody" parent="Objects"]
transform = Transform( 0.5, 0, 0, 0, -1.47883, 0, 0, 0, 1, -3.55924, 1.54138, -0.303376 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground2"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground2"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground8" type="StaticBody" parent="Objects"]
transform = Transform( 0.5, 0, 0, 0, -0.934913, 0, 0, 0, 1.44909, -3.55924, 4.27319, 0.228406 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground8"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground8"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground3" type="StaticBody" parent="Objects"]
transform = Transform( 0.5, 0, 0, 0, -3.46999, 0, 0, 0, 1, -3.55924, 3.39003, -2.71976 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground3"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground3"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground4" type="StaticBody" parent="Objects"]
transform = Transform( -2.18557e-08, 0, -1, 0, -2.21112, 0, 0.5, 0, -4.37114e-08, -2.03371, 1.94902, -4.04187 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground4"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground4"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground5" type="StaticBody" parent="Objects"]
transform = Transform( -2.18557e-08, 0, -1, 0, -1.84798, 0, 0.5, 0, -4.37114e-08, 0.413886, 4.08136, -4.04187 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground5"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground5"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground6" type="StaticBody" parent="Objects"]
transform = Transform( -3.41731e-08, 0, -1.56358, 0, -1.07986, 0, 0.5, 0, -4.37114e-08, 0.93654, 0.875099, -4.04187 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground6"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground6"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground7" type="StaticBody" parent="Objects"]
transform = Transform( -1.99355e-08, 0, -0.912143, 0, -0.704168, 0, 0.5, 0, -4.37114e-08, -2.00463, 5.15368, -4.04187 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground7"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground7"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground9" type="StaticBody" parent="Objects"]
transform = Transform( -0.5, 0, -8.74228e-08, 0, -1.47883, 0, 4.37114e-08, 0, -1, 4.41023, 1.54138, 0.505358 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground9"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground9"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground10" type="StaticBody" parent="Objects"]
transform = Transform( -0.5, 0, -1.26684e-07, 0, -0.934913, 0, 4.37114e-08, 0, -1.44909, 4.41023, 4.27319, -0.0264235 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground10"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground10"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground11" type="StaticBody" parent="Objects"]
transform = Transform( -0.5, 0, -8.74228e-08, 0, -3.46999, 0, 4.37114e-08, 0, -1, 4.41023, 3.39003, 2.92174 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground11"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground11"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground12" type="StaticBody" parent="Objects"]
transform = Transform( -2.18557e-08, 0, 1, 0, -2.21112, 0, -0.5, 0, -4.37114e-08, 2.8847, 1.94902, 4.24386 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground12"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground12"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground13" type="StaticBody" parent="Objects"]
transform = Transform( -2.18557e-08, 0, 1, 0, -1.84798, 0, -0.5, 0, -4.37114e-08, 0.437107, 4.08136, 4.24386 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground13"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground13"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground14" type="StaticBody" parent="Objects"]
transform = Transform( -9.53829e-09, 0, 1.56358, 0, -1.07986, 0, -0.5, 0, -9.2981e-08, -0.0855467, 0.875099, 4.24386 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground14"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground14"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground16" type="StaticBody" parent="Objects"]
transform = Transform( -8.35738e-09, 0, 1.37, 0, -1.50447, 0, -1.67018, 0, -3.10589e-07, -3.44753, 0.875099, 2.83193 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground16"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground16"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground17" type="StaticBody" parent="Objects"]
transform = Transform( -8.35738e-09, 0, 1.37, 0, -1.50447, 0, -1.67018, 0, -3.10589e-07, -3.44753, 4.36418, 3.83686 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground17"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground17"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground18" type="StaticBody" parent="Objects"]
transform = Transform( -1.37654e-07, 0, -1.37, 0, -1.50447, 0, 1.67018, 0, 1.90821e-07, 3.4386, 0.875099, -2.63586 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground18"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground18"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground19" type="StaticBody" parent="Objects"]
transform = Transform( -1.37654e-07, 0, -1.37, 0, -1.50447, 0, 1.67018, 0, 1.90821e-07, 3.4386, 4.36418, -3.6408 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground19"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground19"]
use_collision = true
mesh = SubResource( 2 )

[node name="Ground15" type="StaticBody" parent="Objects"]
transform = Transform( -2.37759e-08, 0, 0.912143, 0, -0.704168, 0, -0.5, 0, -3.60307e-08, 2.85562, 5.15368, 4.24386 )

[node name="CollisionShape" type="CollisionShape" parent="Objects/Ground15"]
shape = SubResource( 1 )
disabled = true

[node name="CSGMesh" type="CSGMesh" parent="Objects/Ground15"]
use_collision = true
mesh = SubResource( 2 )

[connection signal="pressed" from="UI/SignInButton" to="UI" method="_on_SignInButton_pressed"]
